[package]
name = "amiquip"
version = "0.2.2"
authors = ["John Gallagher <johnkgallagher@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Pure Rust RabbitMQ client"
repository = "https://github.com/jgallagher/amiquip"
readme = "README.md"
keywords = ["rabbitmq", "amqp"]
categories = ["network-programming", "api-bindings"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["native-tls"]

[dependencies]
failure = "0.1"
input_buffer = "0.2"
bytes = "0.4"
amq-protocol = "1.4"
log = "0.4"
mio = "0.6"
mio-extras = "2.0"
cookie-factory = "0.2"
crossbeam-channel = "0.3"
indexmap = "1.0"
url = "1.7"
native-tls = { version = "0.2", optional = true }

[build-dependencies]
built = "0.3"

[dev-dependencies]
uuid = { version = "0.7", features = [ "v4" ] }
env_logger = "0.6"
mockstream = "0.0.3"
