[package]
name = "amiquip"
version = "0.4.2"
authors = ["John Gallagher <johnkgallagher@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Pure Rust RabbitMQ client"
repository = "https://github.com/jgallagher/amiquip"
readme = "README.md"
keywords = ["rabbitmq", "amqp"]
categories = ["network-programming", "api-bindings"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["native-tls"]

native-tls = ["native-tls-crate", "__tls"]

rustls-tls = ["rustls-tls-webpki-roots"]
rustls-tls-manual-roots = ["__rustls"]
rustls-tls-webpki-roots = ["rustls-connector/webpki-roots-certs", "webpki-roots", "__rustls"]
rustls-tls-native-roots = ["rustls-connector/native-certs", "rustls-native-certs", "__rustls"]

__rustls = ["rustls", "rustls-connector", "__tls"]
__tls = []

[dependencies]
snafu = { version = "0.7", default-features = false, features = ["std"]}
input_buffer = "0.5"
bytes = "1.1"
amq-protocol = "1.4"
log = "0.4"
mio = "0.6"
mio-extras = "2.0"
cookie-factory = "0.2"
crossbeam-channel = "0.5"
indexmap = "1.6"
url = "2.2.2"
percent-encoding = "2.1"

rustls = { version = "0.20", features = ["dangerous_configuration"], optional = true }
rustls-connector = { version = "0.16.1", optional = true }
webpki-roots = { version = "0.22", optional = true }
rustls-native-certs = { version = "0.6", optional = true }

native-tls-crate = { version = "0.2.10", optional = true, package = "native-tls" }

[build-dependencies]
built = "0.5.1"

[dev-dependencies]
uuid = { version = "0.8", features = [ "v4" ] }
env_logger = "0.9"
mockstream = "0.0.3"
